--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,22 +29,28 @@ body {
 main {
   max-width: 1080px;
   height: calc(100vh - 140px);
-  margin: 20px auto 0;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 10px 0;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  gap: 15px;
-  justify-content: center;
-  overflow-x: scroll;
+  gap: 5px;
+  border-radius: 9px;
+  justify-content: space-evenly;
+  overflow-y: scroll;
   background-color: #fff;
+}
+
+main .container-img {
+  width: 200px;
+  height: 200px;
+  margin: 10px 0;
   border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
-main .imagen-contenedor {
-    width: 450px;
-    height: 550px;
-    overflow: hidden;
-}
-main .imagen-contenedor img {
-    width: 90%;
-    height: 90%;
+main .container-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
